# forest_fire

./: Cargo.toml  README.md
config/: aquamarine.ron  green_tea.ron
src/: configuration.rs  main.rs  simulation.rs  visualization.rs
